documentacao rota users
